@@ -1,3 +1,5 @@
+@file:Suppress("UnstableApiUsage")
+
 plugins {
     java
     alias(libs.plugins.jacoco)
@@ -7,6 +9,8 @@ plugins {
     alias(libs.plugins.javaFx)
     alias(libs.plugins.beryx)
     alias(libs.plugins.maven.publish)
+    alias(libs.plugins.generate.localization.provider)
+    alias(libs.plugins.lombok)
 }
 
 group = "org.nevertouchgrass"
@@ -43,16 +47,23 @@ dependencies {
     implementation(libs.jacksonTypes)
     implementation(libs.sqlite)
     implementation(libs.hikari)
-
+    implementation(libs.reactor)
+    implementation(libs.richtext)
     compileOnly(libs.lombok)
     annotationProcessor(libs.lombok)
+    implementation(libs.jakarta)
 
-    testCompileOnly(libs.lombok)
+    testImplementation(libs.lombok)
     testAnnotationProcessor(libs.lombok)
     testImplementation(libs.bundles.testing)
-    testImplementation(libs.mockito)
-    testRuntimeOnly(libs.junitJupiter)
+    testImplementation(libs.jakarta)
     mockitoAgent("org.mockito:mockito-core:5.14.0") { isTransitive = false }
+}
+
+dependencyManagement {
+    imports {
+        mavenBom(libs.junitBom.get().toString())
+    }
 }
 
 tasks {
@@ -103,7 +114,12 @@ tasks.register<Exec>("runMac") {
     group = "application"
     dependsOn(tasks.bootJar)
     workingDir = rootDir
-    commandLine("java", "-jar", "${tasks.bootJar.get().archiveFile.get().asFile}")
+    commandLine(
+        "java",
+        "--add-opens=java.base/java.lang=ALL-UNNAMED",
+        "-jar",
+        "${tasks.bootJar.get().archiveFile.get().asFile}"
+    )
 }
 
 runtime {
@@ -225,6 +241,6 @@ tasks.installDist {
     enabled = false
 }
 
-tasks.bootJar {
-    dependsOn(tasks.test)
-}
+//tasks.bootJar {
+//    dependsOn(tasks.test)
+//}
